--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "modernizr": "~2.8.1",
     "angular": "~1.4.1",
     "angular-route": "~1.4.1",
-    "restangular": "~1.5.1"
+    "restangular": "~1.5.1",
+    "firebase": "~2.2.7"
   },
   "devDependencies": {
     "chai": "~3.0.0",
